--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "i18next-http-backend": "^3.0.2",
     "lucide-react": "^0.511.0",
     "next": "15.3.2",
+    "next-i18next": "^15.4.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-i18next": "^15.6.0",
